# wordplay

./: .dockerignore  .env.example  Caddyfile  Dockerfile  README.md  build-containers.sh  compose.yml  todo.md  update-deployment.sh
.devcontainer/: devcontainer.json
client/: .prettierrc  Dockerfile  app.config.ts  (+11 more)
server/: .env  .gitignore  Cargo.toml  Dockerfile  notes.md  todo.md
server/.sqlx/: query-03631d85fad4f6af528fa7f9a4dea027baa70c6be2abeb4fe751c80636a9465b.json  query-05cd82120e1aef2808dab0e7a10d5294701822affafa3d8d798d6df730b35dcd.json  query-351b66f62c540702498daddb5688a1f776291feabba6a943b113d601c7060a68.json  query-407b3ddb17b0f0db9f4a59e2361510ced78ec48fb24f4fa3f82b7e43ca7423d4.json  query-65ceeb2a47f69af13375e44a7c837789b4e76f72170936e4c39faeea2efd0d2d.json  query-9d6ea4bf738380d8a9b2c242efe4f3061df9f31655e53873239e0b1413f9e203.json  query-af8d30bbbc76c2719a6031bbc520c1ecabcedd968dec97af8676729691c20dea.json  query-ba29cd7ee4b8951a6c1a3f7309ba288052b7a672927c11629f86e9497dcc6119.json  query-e1698d9942e0ddb54635622f24586ed04e804b21a80648ed2f1f83e036436bb5.json
server/migrations/: 20240614190833_init.sql
server/src/: db.rs  game.rs  global.rs  main.rs  messages.rs  models.rs  routes.rs  state.rs  utils.rs
server/src/game/: games.rs  lobby.rs  messages.rs  room.rs
server/src/game/games/: anagrams.rs  word_bomb.rs
server/src/routes/: api.rs  auth.rs  game.rs  info.rs
server/src/state/: error.rs  games.rs  lobby.rs  messages.rs  room.rs
server/src/state/games/: anagrams.rs  word_bomb.rs
server/src/static/: prompts.txt  words_alpha.txt
(+89 files in other folders)
