[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
futures = "0.3.30"
headers = "0.4.0"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
console-subscriber = "0.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dotenvy = "0.15.7"
rand = "0.8.5"
