[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
futures = "0.3.30"
headers = "0.4.0"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dotenvy = "0.15.7"
rand = "0.8.5"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
] }
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18.1"
thiserror = "1.0.61"
